<resources>
    <string name="app_name">Academios Driver</string>
    <string name="sign_in">Sign in</string>
    <string name="school_key">School Key</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_ac">Don\'t have an account? </string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="already_have_ac">Already have an account?</string>
    <string name="get_otp">Get OTP</string>
    <string name="pass_rem">Password remember?</string>
    <string name="otp">OTP</string>
    <string name="otp_not_rec">OTP not received?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continue_otp">Continue</string>
    <string name="enter_top">Enter OTP</string>
    <string name="sit_back">Sit back &amp; relax. \n We are auto verifying the OTP you received.</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="powered_by_company_title">Powered by AVANTAO Technologies</string>
    <string name="home_work_for">Home work for</string>
    <string name="subject_name">Subject Name</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_list">1. Lorem ipsum dolor sit amet, consetetur
        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et. \n
        2. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut
        labore et. \n
        3. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut
        labore et.</string>
    <string name="mark_comp">Mark as completed</string>
    <string name="calendar_of">Calendar of Class 8th, B section.</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="title_det">Lorem ipsum dolor sit amet, consetetur sadipscing  elitr, sed diam nonumy eirmod tempor invidunt ut</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="do_later">I will complete this later</string>
    <string name="dues_for">Dues for year 2020</string>
    <string name="student_name">Fees for Aadiguru</string>
    <string name="notPaid">Not Paid</string>
    <string name="reports_for">Reports for Aadiguru</string>
    <string name="book_name">Book Name</string>
    <string name="notice_title">Notice Title</string>
    <string name="notices">Notices</string>
    <string name="title_activity_track_bus">Map</string>
    <string name="track_bus">Track Bus</string>
    <string name="title_activity_meetings">MeetingsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="student_name_profile">Student Name</string>
    <string name="class_section">6th A</string>
    <string name="class_title">Class</string>
    <string name="roll_numeber">Roll number</string>
    <string name="roll_number_text">33</string>
    <string name="gender">Gender</string>
    <string name="male">M</string>
    <string name="age_title">Age</string>
    <string name="age_years">12</string>
    <string name="age_in_years">15</string>
    <string name="aboutus">About us</string>
    <string name="atten_pro">Attendance progress</string>
    <string name="privacy">Privacy policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="contact">Contact us</string>
    <string name="rate">Rate us</string>
    <string name="password_change">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="contactus">Contact us</string>
    <string name="old_password">Old password</string>
    <string name="confirm_passwo">Confirm password</string>
    <string name="settings">Settings</string>
    <string name="content">Content will be updated dynamically</string>
    <string name="profile">Profile</string>
    <string name="father_name_profile">Name</string>
    <string name="number">987654321</string>
    <string name="email_address">aadiguru@gmail.com</string>
    <string name="edit_profile">Edit profile</string>
    <string name="timetable">Monday - 08:00 AM to 11:00 AM</string>
    <string name="tue">Tuesday - 08:00 AM to 11:00 AM</string>
    <string name="wed">Wednesday - 08:00 AM to 11:00 AM</string>
    <string name="thu">Thursday - 08:00 AM to 11:00 AM</string>
    <string name="fri">Friday - 08:00 AM to 11:00 AM</string>
    <string name="sat">Saturday - 08:00 AM to 11:00 AM</string>
    <string name="sun">Sunday - OFF</string>
    <string name="routes">Routes</string>
    <string name="time_start">07:30 AM</string>
    <string name="arrival_time">08:15 AM</string>
    <string name="meeting_title_one">Meeting about annual function.</string>
    <string name="meeting_title_two">Upcoming exams discussion.</string>
    <string name="meetings">Meetings</string>
    <string name="events">Events</string>
    <string name="annual">Annual function.</string>
    <string name="leaves">Leaves</string>
    <string name="leave_title">Leave title</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="update_profile">Update profile</string>
    <string name="student_admission">Student admission</string>
    <string name="alerts">Alerts</string>
    <string name="dob">Date of Birth</string>
    <string name="admission_req">Send Admission Request</string>
    <string name="father_name_">Father name</string>
    <string name="request_leave">Request leave</string>
    <string name="title">Title</string>
    <string name="leave_from">Leave from</string>
    <string name="leave_to">Leave to</string>
    <string name="request_meeting">Ask for meeting</string>
    <string name="meeting_with">Meeting with</string>
    <string name="ask_for_meeting">Ask for meeting</string>
    <string name="request_meeting_btn">Request meeting</string>
    <string name="date_time">12/02/2020, 01:23 PM</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadips elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita.</string>
    <string name="alerts_for">Alerts for</string>
    <string name="select_child">Select child</string>
    <string name="home_work">Home work</string>
    <string name="action_bar_title">Title</string>
    <string name="text_replace">text replace</string>
    <string name="januray">January</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="number_format">0091 22 1234 5678</string>
    <string name="knowledge">Knowledge Kingdom Public School</string>
    <string name="schoolname">School Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="from">From:</string>
    <string name="address">Old Plasta Indoor,India</string>
    <string name="schedule">Schedule</string>
    <string name="power">Powered By AVANTAO Technologies</string>
</resources>
