<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rltopBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/home_gradient"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/school_logo_h"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/actionbar_title_m_l"
                android:layout_marginBottom="@dimen/school_logo_m_b"
                android:layout_toRightOf="@+id/btnBack"
                android:text="@string/alerts"
                android:textColor="@drawable/actionbar_text_color"
                android:textSize="@dimen/actionbar_title_size" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvClassSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lv_margin_l"
        android:layout_marginTop="@dimen/student_m_t"
        android:layout_marginBottom="@dimen/student_m_b"
        android:text="@string/alerts_for"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/home_work_for" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_layout_margin_left_right"
        android:layout_marginTop="@dimen/lv_m_t"
        android:layout_marginRight="@dimen/main_layout_margin_left_right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_view_left_bar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lv_margin_r"
                android:layout_marginRight="@dimen/lv_margin_r"
                android:orientation="vertical"
                android:paddingTop="@dimen/layout_padding_t">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/months" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lv_m_t"
                    android:layout_marginRight="@dimen/lv_margin_r"
                    android:paddingBottom="@dimen/layout_padding_t"
                    android:text="@string/title_det"
                    android:textSize="@dimen/event_details" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>