<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg"
    tools:context=".activities.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/inapp_logo_width"
                    android:layout_height="@dimen/inapp_logo_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/logo_margin_top"
                    android:src="@drawable/logo_inapp" />

                <TextView
                    android:id="@+id/title_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLogo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/sign_margin_top"
                    android:text="@string/forgot_password"
                    android:textColor="@color/sign_title_text_color"
                    android:textSize="@dimen/sign_title" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_signin"
                android:layout_marginLeft="@dimen/main_layout_margin_left_right"
                android:layout_marginTop="@dimen/et_margin_top"
                android:layout_marginRight="@dimen/main_layout_margin_left_right">

                <RelativeLayout
                    android:id="@+id/rlSchoolKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSchoolKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_et_margin"
                        android:text="@string/school_key"
                        android:textColor="@color/et_title_gray"
                        android:textSize="@dimen/et_title_text_size">

                    </TextView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvSchoolKey">

                        <EditText
                            android:id="@+id/etSchoolKey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/et_height"
                            android:background="@drawable/rounded_edittext"
                            android:hint="****"
                            android:inputType="textPassword"
                            android:paddingLeft="@dimen/et_text_padding_left"
                            android:textColor="@color/et_text_color_gray" />

                        <ImageView
                            android:id="@+id/ivKey"
                            android:layout_width="@dimen/et_icon_height_width"
                            android:layout_height="@dimen/et_icon_height_width"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/icon_m_r"
                            android:src="@drawable/key"/>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlSchoolKey"
                    android:layout_marginTop="@dimen/et_layout_margin_top">

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/title_et_margin"
                        android:text="@string/phone"
                        android:textColor="@color/et_title_gray"
                        android:textSize="@dimen/et_title_text_size">

                    </TextView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPhone">

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/et_height"
                            android:background="@drawable/rounded_edittext"
                            android:hint="0091 22 1234 5678"
                            android:inputType="phone"
                            android:paddingLeft="@dimen/et_text_padding_left"
                            android:paddingRight="@dimen/et_text_padding_right"
                            android:textColor="@color/et_text_color_gray"
                            android:textCursorDrawable="@drawable/et_cursor_color" />

                        <ImageView
                            android:id="@+id/ivPhone"
                            android:layout_width="@dimen/et_icon_height_width"
                            android:layout_height="@dimen/et_icon_height_width"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/icon_m_r"
                            android:src="@drawable/phone"
                            android:tint="@color/et_text_color_gray"/>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlPhone"
                    android:layout_marginTop="@dimen/et_layout_margin_top">

                    <Button
                        android:id="@+id/btnGetOTP"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:background="@drawable/btn_gradient"
                        android:text="@string/get_otp"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_btn_signup"
                    android:layout_marginTop="@dimen/signup_m_t"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tv_dont_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/pass_rem"
                        android:textColor="@color/et_title_gray"
                        android:textCursorDrawable="@drawable/et_cursor_color"
                        android:textSize="@dimen/et_title_text_size" />

                    <TextView
                        android:id="@+id/tvSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/link_m_l"
                        android:layout_marginTop="5sp"

                        android:layout_toRightOf="@+id/tv_dont_have_account"
                        android:text="@string/sign_in"
                        android:textColor="@color/tv_link"
                        android:textSize="@dimen/et_title_text_size" />
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>